[gd_scene load_steps=4 format=2]

[ext_resource path="res://mini-game/ressources/sprites/obstacle/barrel.png" type="Texture" id=1]
[ext_resource path="res://mini-game/scenes/spawner/pickup.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.3542, 36.1379 )

[node name="pickup" type="Node2D"]
script = ExtResource( 2 )
sprite_texture = ExtResource( 1 )
type = "malus"

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.202437, 0.202437 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 100, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="notifier" to="." method="_on_notifier_screen_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
